# tubic

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  tubic_settings.ini
src/: app.py  app_gui.py  ytdpl_wrapper.py
src/qt/: workers.py  yt_main_window.py
src/qt/py/: main_window.py
src/qt/py_ui/: main_window.py
src/qt/pyui/: main_window.py
src/qt/ui/: main_window.ui
src/yt_dlp_wrap/: link_wrapper.py
tests/: config.py  conftest.py
tests/test_yt_dlp_wrap/: test_link_wrapper.py
tubic/: __main__.py  app.py  app_gui.py  config.py  misc.py  utils.py
tubic/gui_app/: stuff.py
tubic/qt_wrap/: helpers.py  misc.py  tubic_main_window.py  tubic_settings_window.py  workers.py
tubic/qt_wrap/py/: main_window.py  settings_window.py
tubic/qt_wrap/pyui/: main_window.py  settings_window.py
tubic/qt_wrap/ui/: main_window.ui  settings_window.ui
tubic/yt_dlp_wrap/: __init__.py  config.py  link_wrapper.py
tubic/yt_wrapper/: stuff.py
