[tool.black]
line-length = 79

[tool.isort]
line_length = 79
known_local_folder = []

[tool.poetry]
name = "tubic"
version = "2.0.0"
description = "yt-dlp + pyqt6 == ♥️"
authors = ["sentenzo <kassiyskley@rambler.ru>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
PySide6 = "^6.5.1.1"
yt-dlp = "^2023.3.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
