[tool.poetry]
name = "tubic"
version = "1.4.0"
description = "yt-dlp + pyqt6 == ♥️"
authors = ["sentenzo <kassiyskley@rambler.ru>"]
license = "MIT license"
readme = "README.md"
packages = [{ include = "tubic" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
yt-dlp = "^2023.3.4"
pyqt6 = "^6.5.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.2"
pyinstaller = "5.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
